--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "5.5.12",
-    "core-js": "2.6.9",
-    "zone.js": "0.8.29",
-    "@types/node": "6.14.7",
-    "@angular/core": "5.0.5",
-    "@angular/http": "5.0.5",
-    "@angular/forms": "5.0.5",
-    "@types/jasmine": "2.5.54",
+    "@angular/animations": "5.0.5",
     "@angular/common": "5.0.5",
+    "@angular/compiler": "5.0.5",
+    "@angular/core": "5.0.5",
+    "@angular/forms": "5.0.5",
+    "@angular/http": "5.0.5",
+    "@angular/platform-browser": "5.0.5",
+    "@angular/platform-browser-dynamic": "5.0.5",
     "@angular/router": "5.0.5",
     "@angular/upgrade": "5.0.5",
-    "@angular/compiler": "5.0.5",
+    "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.6",
-    "web-animations-js": "2.3.2",
-    "@angular/animations": "5.0.5",
-    "@angular/platform-browser": "5.0.5",
+    "@types/node": "6.14.7",
     "angular-in-memory-web-api": "0.5.4",
-    "@angular/platform-browser-dynamic": "5.0.5"
+    "bootstrap": "^4.3.1",
+    "core-js": "2.6.9",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.14.7",
+    "rxjs": "5.5.12",
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.8.29"
   },
   "scripts": {
     "ng": "ng",
